fix: unify API error responses and separate business errors from security errors